--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@nestjs/typeorm": "^7.1.5",
     "aws-sdk": "^2.686.0",
     "bcrypt": "^4.0.1",
+    "cache-manager": "^3.4.3",
+    "cache-manager-redis-store": "^2.0.0",
     "canvas": "^2.6.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
