--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.12.2",
     "compression": "^1.7.4",
     "config": "^3.3.1",
+    "cross-fetch": "^3.1.4",
     "helmet": "^3.22.0",
     "node-cache": "^5.1.0",
     "passport": "^0.4.1",
