--- a/config/development.yml
+++ b/config/development.yml
@@ -4,7 +4,7 @@ DATABASE:
 UNITPAY:
   PAYMENT_SIGNATURE: '195491-152f657aa68fc45b302b4bd46f8ec856'
   PAYMENT_ID: '195491-6dc9D'
-  
+
 AWS:
   SECRET_ACCESS_KEY: '37T4L1AKRY0tAtJXC7b+FmOCEUFVOoyeMSCx0TGr'
   ACCESS_KEY_ID: 'AKIAIE6IJHPEO346SJ7Q'
@@ -23,3 +23,7 @@ TWILIO:
   ACCOUNT_SID: 'AC8b88bba543faa79b30737180ce72376c'
   SERVICE_SID: 'MG18a4b28a7d5ef40b9ace017a7c52f1cd'
   AUTH_TOKEN: '828d59a50471e07301c4c17622023f1f'
+
+KONTUR:
+  TEST_API_KEY: '3208d29d15c507395db770d0e65f3711e40374df'
+  API_KEY: '07ffb8dbad94eadcad32be29a30032863ec125f2'
