--- a/config/development.yml
+++ b/config/development.yml
@@ -4,12 +4,12 @@ DATABASE:
 UNITPAY:
   PAYMENT_SIGNATURE: '195491-152f657aa68fc45b302b4bd46f8ec856'
   PAYMENT_ID: '195491-6dc9D'
-  
+
 AWS:
-  SECRET_ACCESS_KEY: '37T4L1AKRY0tAtJXC7b+FmOCEUFVOoyeMSCx0TGr'
-  ACCESS_KEY_ID: 'AKIAIE6IJHPEO346SJ7Q'
+  SECRET_ACCESS_KEY: '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'
+  ACCESS_KEY_ID: 'AKIAX7CIUBVQ6B4QXYEX'
   REGION: 'us-east-2'
-  BUCKET_NAME: 'testdownloadimagesbucket'
+  BUCKET_NAME: 'kontragent'
   ACL: 'public-read'
 
 MAIL:
