--- a/config/development.yml
+++ b/config/development.yml
@@ -13,8 +13,8 @@ AWS:
   ACL: 'public-read'
 
 MAIL:
-  MAIL_LOGIN: 'teskakaskasdkaksd@mail.ua'
-  MAIL_PASSWORD: 'cHFSnvcMtsixUtt9ncL2'
+  MAIL_LOGIN: 'kontragent-heroku@mail.ru'
+  MAIL_PASSWORD: 'nwUwJtZjRk6|j9R'
   MAIL_HOST: 'smtp.mail.ru'
   MAIL_PORT: 465
   MAIL_SERVICE: 'Mail.ru'
