--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "config": "^3.3.1",
     "cross-fetch": "^3.1.4",
     "helmet": "^3.22.0",
+    "html-pdf": "^3.0.1",
     "node-cache": "^5.1.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
