--- a/config/production.yml
+++ b/config/production.yml
@@ -15,10 +15,8 @@ AWS:
   ACL: 'public-read'
 
 MAIL:
-  MAIL_LOGIN: 'kontragent-heroku@mail.ru'
-  MAIL_PASSWORD: 'ZiN7kUNHiwk2Qeh17rP4'
-  # MAIL_LOGIN: 'kontragentrf@mail.ru'
-  # MAIL_PASSWORD: 'k24EcsEVNyL8MM0QAHMN'
+  MAIL_LOGIN: 'kontragentrf@mail.ru'
+  MAIL_PASSWORD: 'k24EcsEVNyL8MM0QAHMN'
   MAIL_HOST: 'smtp.mail.ru'
   MAIL_PORT: 465
   MAIL_SERVICE: 'Mail.ru'
