--- a/config/production.yml
+++ b/config/production.yml
@@ -15,13 +15,14 @@ AWS:
   ACL: 'public-read'
 
 MAIL:
-  MAIL_LOGIN: 'kontragent-heroku@mail.ru'
-  MAIL_PASSWORD: 'ZiN7kUNHiwk2Qeh17rP4'
+  MAIL_LOGIN: 'pasha1nova@gmail.com'
+  MAIL_PASSWORD: 'tibwszywjgxvmmci'
+  MAIL_HOST: 'smtp.gmail.com'
   # MAIL_LOGIN: 'kontragentrf@mail.ru'
   # MAIL_PASSWORD: 'k24EcsEVNyL8MM0QAHMN'
-  MAIL_HOST: 'smtp.mail.ru'
-  MAIL_PORT: 465
-  MAIL_SERVICE: 'Mail.ru'
+  # MAIL_HOST: 'smtp.mail.ru'
+  # MAIL_PORT: 465
+  # MAIL_SERVICE: 'Mail.ru'
 
 UNITPAY:
   PAYMENT_SIGNATURE: 'ab9e5fac77bdfe33049d29ea9ff87b2a'
